pingpong-application/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: devops-exercise
  name: pingpong-app-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      volumes:
        - name: pingpong-volume
          emptyDir: {}
      containers:
        - name: pingpong-app
          image: hpkhanhloc/pingpong-application:v0.2
