pingpong-application/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: pingpong-app-ingress
spec:
  rules:
    - http:
        paths:
          - path: /pingpong
            backend:
              serviceName: pingpong-svc
              servicePort: 80
